--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,20 @@ html,body{
     background-color: #fff;
 }
 
+#pointer-circle-2{
+    transition: cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    z-index: 99999;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .bound{
     width: fit-content;
     overflow: hidden;
@@ -88,8 +102,11 @@ html,body{
   margin-top: 160px;
   padding-right: 50px;
   display: flex;
-  align-items: right;
+  flex-direction: column;
+  align-items: end;
 }
+
+
 
 #available h5{
     text-transform: uppercase;
@@ -168,7 +185,7 @@ html,body{
 }
 
 .org img{
-    display: none;
+    opacity: 0;
     height: 140%;
     position: absolute;
     z-index: 999;
