--- a/styles.css
+++ b/styles.css
@@ -20,19 +20,7 @@ html,body{
     background-color: #fff;
 }
 
-#pointer-circle-2{
-    transition: cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    z-index: 99999;
-    border-radius: 50%;
-    background-color: #fff;
-    opacity: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 
 .bound{
     width: fit-content;
@@ -189,6 +177,7 @@ html,body{
     height: 140%;
     position: absolute;
     z-index: 999;
+    border-radius: 10px;
 }
 
 #about{
